# Prediction-Survivor

./: .gitignore  .pre-commit-config.yaml  CONFIG.md  CONTRIBUTING.md  EVALUATION.md  Makefile  README.md  STEPS.md  config.yaml  pyproject.toml  ruff.toml
.github/workflows/: checks.yml  ruff.yml
examples/: config_usage.py
src/: __init__.py  config.py  main.py
src/modules/: __init__.py  data_preparation.py  loading.py  models.py
tests/: __init__.py  test_config.py  test_data_preparation.py  test_loading.py  test_main.py  test_models.py
