[tool.poetry]
name = "Prediction-Survival"
version = "0.1.0"
description = ""
authors = ["Jeremy Vachier"]
readme = ""

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.26.2"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
tensorflow-io-gcs-filesystem = "^0.34.0"
tensorflow-macos = "^2.15.0"
datetime = "^5.4"
statsmodels = "^0.14.1"
keras = "^2.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
