[project]
name = "prediction-survival"
version = "1.1.0"
description = "Survivor prediction using classical machine learning models and a deep neural network."
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{name = "Jeremy Vachier"}]
dependencies = [
	"numpy>=1.26.2",
	"pandas>=2.1.4",
	"scikit-learn>=1.5.0",
	"tensorflow-io-gcs-filesystem>=0.34.0",
	"tensorflow-macos>=2.15.0",
	"datetime>=5.4",
	"statsmodels>=0.14.1",
	"scikit-optimize>=0.9.0",
]

[dependency-groups]
dev = [
	"black>=24.3.0",
	"ruff>=0.2.1",
	"pylint>=3.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
